--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table id="calculator">
 
     <tr>
-       <td colspan="3" > <input type="text" id="result"> </td> 
+       <td colspan="3" id="result">  </td> 
        <td><input type="button" value="C" id="clear-button"></td>
     </tr>
     
