--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Basic Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light-mode">
 <table id="calculator">
 
     <tr>
@@ -42,8 +42,10 @@
 
 </table>
 
-
-
+<div id="toggle">
+<input type="radio" name="mode" class="light-mode">Light</input>
+<input type="radio" name="mode" class="dark-mode">Dark</input>
+</div>
 
 
 
